# rss-rust

./: .copier-answers.yml  .env.example  .gitignore  .tool-versions  Cargo.toml  README.md  Taskfile.yml  compose.yaml
.woodpecker/: branch.yaml  clone-kaleido.sh  deploy.sh  main.yaml  test-rust.sh  test-ui.sh
api/: Cargo.toml  Dockerfile  Dockerfile.dev
api/src/: app_error.rs  config.rs  feature_flags_keys.rs  lib.rs  main.rs  metrics.rs  openapi.rs  storage.rs
api/src/controllers/: admin.rs  assets.rs  feeds.rs  folders.rs  mod.rs
api/src/entities/: articles.rs  feed_folders.rs  feeds.rs  fetch_history.rs  mod.rs  user_articles.rs  user_feeds.rs
api/src/extractors/: folder.rs
api/src/tasks/: adapter.rs  mod.rs
fake-feeds/: article-1.html  article-2.html  article-3.html  articles.html  index.html  minimal.html  news.html  noisy.html  rss.xml
migration/: Cargo.toml
migration/src/: lib.rs  m20260307_120000_init.rs  m20260309_000000_add_unread_count_to_user_feeds.rs  m20260309_100000_add_fetch_history_fields.rs  m20260310_000000_add_fetch_interval_to_feeds.rs  m20260310_100000_add_sort_order_to_user_feeds.rs  m20260317_000000_add_saved_at_to_user_articles.rs  m20260317_100000_add_feed_discovery_fields.rs  m20260317_200000_add_name_override_to_user_feeds.rs  m20260318_000000_add_favicon_to_feeds.rs  m20260320_000000_add_view_mode_to_user_feeds.rs  m20260320_100000_create_feed_folders.rs  m20260320_200000_add_folder_id_to_user_feeds.rs  m20260321_000000_add_view_mode_to_feed_folders.rs  m20260406_000000_add_only_unread.rs  m20260406_100000_add_author_to_articles.rs
ui-next/: Dockerfile  Dockerfile.dev  create-env.sh  docker-entrypoint-dev.sh  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
ui-next/app/: globals.css  layout.tsx  page.tsx
ui-next/app/account/: page.tsx
ui-next/app/admin/: layout.tsx  page.tsx
ui-next/app/confirm-email/: page.tsx
ui-next/app/feeds/: layout.tsx  page.tsx
ui-next/app/forgot-password/: page.tsx
ui-next/app/login/: page.tsx
ui-next/app/logout/: page.tsx
ui-next/app/resend-confirmation/: page.tsx
ui-next/app/reset/: page.tsx
ui-next/app/signup/: page.tsx
ui-next/app/verify/: page.tsx
ui-next/components/: AuthRouter.tsx  Layout.tsx  Navigation.tsx  Providers.tsx
ui-next/components/admin/: AdminFeedsPanel.tsx  AdminMaintenancePanel.tsx  Nav.tsx  RssMetricsSection.tsx
ui-next/components/auth/: RequireAdmin.tsx  RequireAuth.tsx
ui-next/components/feeds/: AddFeedForm.tsx  ArticleList.tsx  CreateFolderForm.tsx  FeedHeaderSettings.tsx  FeedHeaderTitle.tsx  FeedList.tsx  FeedListItem.tsx  FetchHistoryModal.tsx  FolderHeaderAppearance.tsx  FolderHeaderSavedToggle.tsx  FolderSection.tsx  FolderViewHeader.tsx  (+6 more)
ui-next/lib/: api.ts  kaleido.ts  queries.ts  useArticleKeyboardNav.ts  useArticleViewer.ts  usePendingVerifications.ts  useScrollDirection.ts  useViewPreferences.ts
worker/: Cargo.toml  Dockerfile  Dockerfile.dev
worker/src/: feed_fetcher.rs  html_extractor.rs  lib.rs  main.rs  ollama.rs  test_fixtures.rs
worker/src/email/: mod.rs  templates.rs
worker/src/email/templates/: notification.html  notification.txt
worker/src/tasks/: mod.rs
worker/src/tasks/processors/: email_notification.rs  favicon_fetcher.rs  feed_discovery.rs  feed_verifier.rs  fetcher.rs  mod.rs  page_extractor.rs  single_feed_fetcher.rs
(+20 files in other folders)
