[workspace]
members = [
  "api",
  "worker",
  "migration",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "2.0.0-rc.27", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "2.0.0-rc.27", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
once_cell = "1.19"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }

[patch."https://github.com/ericbutera/kaleido"]
auth = { path = "../kaleido/rust/auth" }
background_jobs = { path = "../kaleido/rust/background_jobs" }
glass = { path = "../kaleido/rust/glass" }
kaleido_migrations = { path = "../kaleido/rust/kaleido_migrations" }
