[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
sea-orm-migration = { workspace = true }
async-trait = "0.1"
kaleido_migrations = { git = "https://github.com/ericbutera/kaleido", branch = "main" }
