[package]
name = "worker"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "worker"
path = "src/main.rs"

[lib]
name = "worker"
path = "src/lib.rs"

[dependencies]
api = { path = "../api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
kaleido = { git = "https://github.com/ericbutera/kaleido", branch = "main" }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
feed-rs = "2"
sha2 = "0.10"
ammonia = "4"
hex = "0.4"
anyhow = "1"
scraper = "0.21"
url = "2"

[dev-dependencies]
mockito = "1"
